primera subida ejercicios de Dom

--- a/.learn/resets/12-Add-Options-to-the-Select/index.html
+++ b/.learn/resets/12-Add-Options-to-the-Select/index.html
@@ -2,11 +2,10 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<link rel="stylesheet" href="styles.css" />
 		<meta name="viewport" content="width=device-width" />
 		<title>ADD OPTIONS TO THE SELECT</title>
 	</head>
-	<body onload="selectcoun();">
+	<body>
 		<select title="select" id="mySelect">
 			<option value="-1">Select your country</option>
 		</select>
