--- a/exercises/09-Render-on-Click/index.html
+++ b/exercises/09-Render-on-Click/index.html
@@ -6,7 +6,10 @@
 		<title>RENDER ON CLICK</title>
 	</head>
 	<body>
+		<button onclick="myFunction()">Pulsa me</button>
 		<input id="superDuperButton" type="button" value="Click me" />
 		<script src="./index.js"></script>
 	</body>
 </html>
+
+<button onclick="myFunction()">Append</button>
